--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   Deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        region: [ap-southeast-2]
     steps:
       - uses: actions/checkout@v2
       
@@ -19,7 +22,7 @@ jobs:
       - name: serverless deploy
         uses: serverless/github-action@master
         with:
-          args: deploy
+          args: deploy --region ${{ matrix.region }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
